# FifaPackOpener

FUTPax/: CMakeLists.txt  main.cpp
FUTPax/FUTPaxLib/: CMakeLists.txt  Card.cpp  Card.h  Draft.cpp  Draft.h  Formation.cpp  Formation.h  Game.cpp  Game.h  GameMode.cpp  GameMode.h  PackOpener.cpp  PackOpener.h  PlayerSelections.cpp  PlayerSelections.h  pch.h
FutbinScraper/: script.py
Scraper/: Main.py
